# Q-Ready-Public

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.husky/: pre-commit
agent/: Dockerfile  requirements.txt  scan.py
agent/scanners/: __init__.py  cert_store.py  crypto_libs.py  openssl_cnf.py  ssh_keys.py  sshd_config.py
agent/scoring/: __init__.py  algo_severity.py  criticality_factor.py  qr_score.py  recommendations.py  risk_score.py  temporal_factor.py
agent/tests/fixtures/: test_openssl_aes128.cnf  test_openssl_critical.cnf  test_openssl_high.cnf  test_openssl_medium.cnf  test_openssl_strong.cnf  test_openssl_weak.cnf
agent/tests/import/: README.md  authorized_keys.txt
agent/tests/ssh/: ssh_key_test  ssh_key_test.ppk  sshd_config
backend/: Dockerfile  cert_parser.py  config_parser.py  database.py  main.py  models.py  orm.py  repository.py  requirements.txt  ssh_parser.py
backend/routers/: imports.py  scan.py
backend/tests/: README.md  conftest.py  test_import_endpoints.py  test_scan_endpoints.py  test_ssh_parser.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: .gitkeep
frontend/src/hooks/: .gitkeep
frontend/src/pages/: Dashboard.tsx  Findings.tsx  Import.tsx  Lab.tsx
frontend/src/types/: api.ts
scripts/: restore_demo.py  save_demo.py
shared/: pyproject.toml
shared/qready_scoring/: __init__.py  algo_severity.py  recommendation.py  temporal_factor.py
(+13 files in other folders)
